darwin: remove -lto_library argumt to ld64.lld, it should not be needed anymore
(cherry picked from commit d3336325dba9b21f6f4a04f81f06744dc3864fbb)